--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
             <!-- Aside -->
             <div class="col-span-6 md:col-span-1 bg-white p-4 rounded shadow">
                 <h2 class="text-xl font-bold mb-4">Your Cart</h2>
-                <h4>tree</h4>
+                
+                <div id="addContainer">
+
+                </div>
         </section>
 
         <section class="mt-20 pb-10 inter mb-5">
@@ -124,9 +127,9 @@
             </div>
         </section>
 
-        <section class="bg-green-800">
+        <section class="bg-green-800 p-10">
             <h1 class="text-center font-bold text-2xl text-white p-5">Plant a Tree Today</h1>
-            <div class="text-center max-w-1/3 mx-auto bg-green-700 p-10">
+            <div class="text-center max-w-1/3 mx-auto bg-green-700 p-10 rounded-2xl">
                 <input class="bg-[#fff] border-none rounded-xl p-2 w-100" type="text" name="Your Name" id="name"
                     placeholder="Your Name">
                 <br>
@@ -144,6 +147,10 @@
                 <button class="w-full bg-yellow-500 my-4 pl-2 pr-2 rounded-full">Donate Now</button>
             </div>
         </section>
+
+        <footer class="text-center bg-green-950 text-white p-3">
+            © 2025 Green Earth. All Rights Reserved.
+        </footer>
 
     </main>
 
