--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green Earth</title>
 
-    <!-- Tailwind & DaisyUI CDN -->
+    <!-- TAILWIND & DAISYUI -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
-    <!-- Font Awesome CDN -->
+    <!-- FONT AWESOME CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Font Family -->
+    <!-- FONT FAMILY -->
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -23,7 +23,7 @@
 <body>
 
     <header>
-        <!-- Nav Bar -->
+        <!-- NAV BAR -->
 
         <div class="navbar bg-base-100 shadow-sm pl-10 pr-10 bg-[#15803D] inter">
             <div class="navbar-start">
@@ -41,7 +41,7 @@
             </div>
         </div>
 
-        <!-- Banner -->
+        <!-- BANNER -->
         <section>
             <div class="flex justify-between bg-[#CFF0DC]">
                 <div>
@@ -63,40 +63,41 @@
     <main class="bg-[#DCFCE7] inter">
         <h1 class="text-center text-2xl pt-10 pb-10 font-bold text-[#1f2937]">Chose Your Trees</h1>
 
-        <section class="grid grid-cols-1 md:grid-cols-6 gap-4 max-w-11/12 mx-auto">
-            <!-- Categories -->
-            <section class="col-span-6 md:col-span-2 lg:col-span-1 bg-[#DCFCE7] p-4 rounded ">
+        <section class="grid grid-cols-1 md:grid-cols-6 lg:grid-cols-6 gap-4 max-w-[90%] mx-auto">
+            <!-- CATEGORIES -->
+            <section class="md:col-span-2 lg:col-span-1 bg-[#DCFCE7] p-4 rounded ">
 
                 <ul id="category-container" class="space-y-2 bg-[#DCFCE7] text-center w-full">
 
                 </ul>
             </section>
 
-            <!-- Cart -->
+            <!-- CART -->
             <section class="col-span-6 md:col-span-2 lg:col-span-4 bg-white p-4 rounded shadow">
                 <!-- <h2 class="text-xl font-bold mb-4">Cart</h2> -->
 
-                <div id="plants-container" class="grid grid-cols-3 gap-4 w-full ">
+                <div id="plants-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 w-full">
 
                 </div>
             </section>
 
-            <!-- Aside -->
+            <!-- ASIDE -->
             <div class="col-span-6 md:col-span-1 bg-white p-4 rounded shadow">
                 <h2 class="text-xl font-bold mb-4">Your Cart</h2>
                 
                 <div id="addContainer">
-
+                    
                 </div>
         </section>
 
+        <!--    ABOUT THE CAMPAIGN -->
         <section class="mt-20 pb-10 inter mb-5">
             <h1 class="text-center my-6 font-bold text-2xl">About the Campaign</h1>
-            <div class="flex max-w-1/2 mx-auto gap-5">
+            <div class="flex flex-col md:flex-row max-w-1/2 mx-auto gap-5">
                 <div>
-                    <img class="h-80 w-400" src="./assets/about.png" alt="">
+                    <img class="h-90 w-350 shadow-sm " src="./assets/about.png" alt="">
                 </div>
-                <div class="mt-25">
+                <div class="md:20 lg:mt-25 ">
                     <p class="text-[12px]">Green Earth is a global tree plantation initiative dedicated to fighting
                         climate change. Since our start, we’ve planted over 500,000 trees worldwide. By joining our
                         campaign, you help restore forests, create habitats for wildlife, and combat global warming.</p>
@@ -111,16 +112,16 @@
 
         <section class="p-8 bg-[#CFF0DC]">
             <h3 class="text-center font-bold text-2xl">Our Impact</h3>
-            <div class="flex justify-around mt-5">
-                <div class="bg-[#FFFF] w-80 p-5 hover:bg-green-400 rounded-xl shadow-sm">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-5 mt-5 max-w-6xl mx-auto">
+                <div class="bg-[#FFFF] sm:w-80 p-5 hover:bg-green-400 rounded-xl shadow-sm">
                     <h1 class="text-center font-semibold text-green-800 text-2xl">500K+</h1>
                     <p class="text-center ">Trees Planted</p>
                 </div>
-                <div class="bg-[#FFFF] w-80 p-5 hover:bg-green-400 rounded-xl shadow-sm">
+                <div class="bg-[#FFFF] sm:w-80 p-5 hover:bg-green-400 rounded-xl shadow-sm">
                     <h1 class="text-center font-semibold text-green-800 text-2xl">120+</h1>
                     <p class="text-center text-1xl">Communities Involved</p>
                 </div>
-                <div class="bg-[#FFFF] w-80 p-5 hover:bg-green-300 rounded-xl shadow-sm">
+                <div class="bg-[#FFFF] sm:w-80 p-5 hover:bg-green-300 rounded-xl shadow-sm">
                     <h1 class="text-center font-semibold text-green-800 text-2xl">30+</h1>
                     <p class="text-center text-1xl">Countries Reached</p>
                 </div>
@@ -129,22 +130,22 @@
 
         <section class="bg-green-800 p-10">
             <h1 class="text-center font-bold text-2xl text-white p-5">Plant a Tree Today</h1>
-            <div class="text-center max-w-1/3 mx-auto bg-green-700 p-10 rounded-2xl">
-                <input class="bg-[#fff] border-none rounded-xl p-2 w-100" type="text" name="Your Name" id="name"
+            <div class="text-center max-w-md mx-auto bg-green-700 p-10 rounded-2xl">
+                <input class="bg-[#fff] border-none rounded-xl p-2 w-full" type="text" name="Your Name" id="name"
                     placeholder="Your Name">
                 <br>
                 <br>
-                <input class="bg-[#fff] border-none rounded-xl p-2 w-100" type="email" name="Your Email" id="name"
+                <input class="bg-[#fff] border-none rounded-xl p-2 w-full" type="email" name="Your Email" id="name"
                     placeholder="Your Email Address">
                 <br>
                 <br>
-                <select class="bg-[#fff] border-none rounded-xl p-2 w-100 text-gray-500">
+                <select class="bg-[#fff] border-none rounded-xl p-2 w-full text-gray-500">
                     <option class="text-black" disabled selected>Number of Trees</option>
                     <option class="hover:bg-blue-500">1 Tree - $5</option>
                     <option class="hover:bg-blue-500">5 Tree - $25</option>
                     <option class="hover:bg-blue-500">10 Trees - $50</option>
                 </select>
-                <button class="w-full bg-yellow-500 my-4 pl-2 pr-2 rounded-full">Donate Now</button>
+                <button class="w-full bg-yellow-500 my-4 pl-2 py-2 rounded-full">Donate Now</button>
             </div>
         </section>
 
